--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:HQuQMp5z+5hzAwBXMOvMOCHsup0KWPRDWkoXcCpyQ6Y=
+APP_KEY=base64:ZDfd0/WcuDxPQ3b/RTsS8hKw5conXGAl+paw0RJnzgo=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_NAME=MainLims
+APP_URL=http://localhost/MainLims/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE="u199175327_lims"
-DB_USERNAME="u199175327_eslambadawy256"
-DB_PASSWORD="M1e0s6s9i9#"
+DB_DATABASE=lims_master
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,7 +21,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-CENTRAL_DOMAIN=localhost/LimsMaster
+CENTRAL_DOMAIN=localhost
 
 MEMCACHED_HOST=127.0.0.1
 
