--- a/.env
+++ b/.env
@@ -11,9 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=lims_master
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u603307539_lims_master
+DB_USERNAME=u603307539_eslambadawy256
+DB_PASSWORD="M1e0s6s9i9#"
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
