--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u338606818_lims
-DB_USERNAME=u338606818_eslambadawy256
-DB_PASSWORD="M1e0s6s9i9#"
+DB_DATABASE=lims
+DB_USERNAME=root
+DB_PASSWORD="M1e0s6s9i9#@"
 
 
 
