--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ZDfd0/WcuDxPQ3b/RTsS8hKw5conXGAl+paw0RJnzgo=
+APP_KEY=base64:UC+XrVkz1Oxg9jfy0KPTxfanhiReuRteTp2bpUEfhC0=
 APP_DEBUG=true
-APP_URL=http://localhost/MainLims/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,9 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=lims
 DB_USERNAME=root
-DB_PASSWORD="M1e0s6s9i9#@"
-
-
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,7 +21,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-CENTRAL_DOMAIN=localhost
 
 MEMCACHED_HOST=127.0.0.1
 
