--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZDfd0/WcuDxPQ3b/RTsS8hKw5conXGAl+paw0RJnzgo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/MainLims/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=lims
 DB_USERNAME=root
 DB_PASSWORD=
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,6 +23,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+CENTRAL_DOMAIN=localhost
 
 MEMCACHED_HOST=127.0.0.1
 
