--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=lims
 DB_USERNAME=root
-DB_PASSWORD=M1e0s6s9i9#@
+DB_PASSWORD="M1e0s6s9i9#@"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
